modificacao index AAA

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <footer>
         <div class="finish">
             <div class="finishPhrase">
-                Selecione os 3 itens para fechar o pedido
+                Selecione os 3 itens para fechar o pedido AAAAAA
             </div>
         </div>
     </footer>
